preparing for publishing

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "AM_module",
+  "name": "@siddharthchadha/am-module",
   "version": "0.0.1",
   "author": "Siddharth Chadha <siddharth@assetmantle.one>",
   "private": true,
