changing package name

--- a/packages/AM_module/package.json
+++ b/packages/AM_module/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "AM_module",
+  "name": "@siddharthchadha/am_module",
   "version": "0.0.2",
   "author": "Siddharth Chadha <siddharth@assetmantle.one>",
   "description": "AM_module",
